<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/transactions"
        android:enabled="true"
        android:icon="@drawable/ic_transactions_white_24dp"
        android:title="@string/title_transaction"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/categories"
        android:enabled="true"
        android:icon="@drawable/ic_category_white_24dp"
        android:title="@string/title_categories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />
</menu>