<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_arrow_right_24dp" />

        <TextView
            android:id="@+id/tv_currency_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_currency"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_default_currrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_currency_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_default_currrency"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlack" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_arrow_right_24dp" />

        <TextView
            android:id="@+id/tv_theme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_theme"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_default_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_theme_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_default_theme"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlack" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_arrow_right_24dp" />

        <TextView
            android:id="@+id/tv_export_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_export"
            android:textSize="24sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_export_title"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlack" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_arrow_right_24dp" />

        <TextView
            android:id="@+id/tv_import_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_import"
            android:textSize="24sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_import_title"
            android:layout_marginTop="16dp"
            android:background="@color/colorBlack" />
    </RelativeLayout>

</LinearLayout>